# PLUG

./: .gitignore  CLAUDE.md  README.md
PLUG/: Info.plist  PLUG-Bridging-Header.h  PLUGApp.swift
PLUG.xcodeproj/: project.pbxproj
PLUG/Core/: AsciidocParser.swift  BalanceUnit.swift  ColorTheme.swift  ContractSpendCoordinator.swift
PLUG/Models/: Models.swift
PLUG/ViewModels/: AtomicSwapVM.swift  BackupVM.swift  CagnotteVM.swift  ChannelVM.swift  CoinJoinVM.swift  ContractBubbleVM.swift  ContractVM.swift  HTLCVM.swift  HeritageVM.swift  HomeVM.swift  InheritanceVM.swift  LedgerVM.swift  OpReturnVM.swift  PoolVM.swift  ScriptVM.swift  SettingsVM.swift  TirelireVM.swift  VaultVM.swift  WalletVM.swift
PLUG/Views/: AddressBookView.swift  AtomicSwapView.swift  BackupView.swift  BlockDurationPicker.swift  BubbleMapView.swift  CagnotteView.swift  ChannelView.swift  CoinJoinView.swift  ContractCreatedSheet.swift  HTLCView.swift  HeritageView.swift  HomeView.swift  InheritanceView.swift  KeyIndexPicker.swift  LearnView.swift  LedgerView.swift  OnboardingView.swift  OpReturnView.swift  PlugHeader.swift  PoolView.swift  QRScannerView.swift  (+6 more)
PLUGTests/: BitcoinTests.swift  PLUGTests.swift
PlugTor.xcframework/: Info.plist
plug-node/: show-qr.sh
plug-tor/: Cargo.toml  build-ios.sh
plug-tor/PlugTor.xcframework/: Info.plist
plug-tor/PlugTor.xcframework/ios-arm64-simulator/Headers/: plug_tor.h
plug-tor/PlugTor.xcframework/ios-arm64/Headers/: plug_tor.h
plug-tor/examples/: test_direct.rs
plug-tor/src/: lib.rs
plug-tor/tests/: test_connect.rs  test_direct.rs
(+49 files in other folders)
