[package]
name = "plug-tor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "plug_tor"

[dependencies]
arti-client = { version = "0.28", features = ["onion-service-client"] }
tor-rtcompat = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
once_cell = "1"
